# gnu_freemediatools

./: README
FreeMediaTools/: AUTHORS  ChangeLog  FreeMediaTools.1  FreeMediaTools.info  FreeMediaTools.lsm.in  FreeMediaTools.spec.in  FreeMediaTools.texinfo  INSTALL  Makefile.Scan  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  boilerplate.pl  boilerplate.txt  config.h.in  configure  configure.in  copyright.txt  ofx.txt  removed.am  removed.am~  runautomake.sh  runconfigure.sh  scan.sh  todo.txt  valuegrind.sh
FreeMediaTools/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
FreeMediaTools/debugging/: FreeMedia.txt.14503  FreeMedia.txt.16244  FreeMedia.txt.17509  FreeMedia.txt.24559  FreeMedia.txt.7231  FreeMedia.txt.7632  FreeMedia.txt.8770  FreeMedia.txt.9540  FreeMedia.valgrind  FreeMedia.valgrind.report  asset.txt  collectgcov.sh  gprof.txt  symbols.txt  tracker.txt  world.txt  world_core.txt  world_renderspace.txt
FreeMediaTools/jahshaka/: test.c
FreeMediaTools/jahshaka/Pixmaps/: face.3DS  jah icon gimp.xcf  jahshaka.icns
FreeMediaTools/jahshaka/Pixmaps/CVS/: Entries
FreeMediaTools/jahshaka/Pixmaps/desktop/CVS/: Entries
FreeMediaTools/jahshaka/Pixmaps/desktopController/: desktopcontroller.psd
FreeMediaTools/jahshaka/Pixmaps/interface/: charcoal.xpm
FreeMediaTools/jahshaka/Pixmaps/interface/CVS/: Entries  Repository  Root
FreeMediaTools/jahshaka/Pixmaps/jahplayer/CVS/: Entries  Repository
FreeMediaTools/jahshaka/Pixmaps/network/: error.html  offline.html
FreeMediaTools/jahshaka/Pixmaps/paint/CVS/: Entries
FreeMediaTools/jahshaka/Pixmaps/wireup/: newnode.xcf
FreeMediaTools/jahshaka/Pixmaps/wireup/CVS/: Entries  Repository
FreeMediaTools/jahshaka/database/: instructions.txt  jahdesktop.db  wipedbase
FreeMediaTools/jahshaka/media/models/disco_lighting/: _0.frag  _0.vert  _1.frag  _1.vert  _2.frag  _2.vert
FreeMediaTools/jahshaka/plugins/: Makefile  configure
FreeMediaTools/jahshaka/plugins/csplugins/: CLEARSPEEDPLUGINS
FreeMediaTools/jahshaka/plugins/csplugins/csfisheye/: csfisheye.cpp  csfisheye.cpp~  csfisheye.h  csfisheye.h~
FreeMediaTools/jahshaka/plugins/csplugins/csmandelbrot/: csmandelbrot.cpp  csmandelbrot.cpp~  csmandelbrot.h  csmandelbrot.h~  mandelcolor.h
FreeMediaTools/jahshaka/plugins/csplugins/csmandelbrotcolor/: csmandelbrotcolor.cpp  csmandelbrotcolor.cpp~  csmandelbrotcolor.h  csmandelbrotcolor.h~
FreeMediaTools/jahshaka/plugins/encoders/: divx.jpl  dv.jpl  jpg.jpl  libdv.jpl  mp2.jpl  mpg.jpl  png.jpl  psp.jpl  swf.jpl
FreeMediaTools/jahshaka/plugins/jfxplugins/: JAHFXPLUGINS  Makefile
FreeMediaTools/jahshaka/plugins/jfxplugins/vfxbathroom/: Makefile  config.h  vfxbathroom.cpp  vfxbathroom.h
FreeMediaTools/jahshaka/plugins/jfxplugins/vfxfisheye/: Makefile  config.h  vfxfisheye.cpp  vfxfisheye.h
FreeMediaTools/jahshaka/plugins/jfxplugins/vfxgrey/: Makefile  config.h  vfxgrey.cpp  vfxgrey.h
FreeMediaTools/jahshaka/plugins/jfxplugins/vfxmandelbrot/: Makefile  config.h  vfxmandelbrot.cpp  vfxmandelbrot.h
FreeMediaTools/jahshaka/plugins/jfxplugins/vfxmosaic/: Makefile  config.h  vfxmosaic.cpp  vfxmosaic.h
FreeMediaTools/jahshaka/plugins/jfxplugins/vfxoil/: Makefile  config.h  vfxoil.cpp  vfxoil.h
FreeMediaTools/jahshaka/plugins/jfxplugins/vfxpolarnoise/: Makefile  config.h  vfxpolarnoise.cpp  vfxpolarnoise.h
FreeMediaTools/jahshaka/plugins/jfxplugins/vfxpolarwarp/: Makefile  config.h  vfxpolarwarp.cpp  vfxpolarwarp.h
FreeMediaTools/jahshaka/plugins/jfxplugins/vfxrelief/: Makefile  config.h  vfxrelief.cpp  vfxrelief.h
FreeMediaTools/jahshaka/plugins/jfxplugins/vfxswirl/: Makefile  config.h  vfxswirl.cpp  vfxswirl.h
FreeMediaTools/jahshaka/plugins/jitplugins/: JITPLUGINS  Makefile
FreeMediaTools/jahshaka/plugins/jitplugins/jitaverage/: Makefile  config.h  jitaverage.cpp  jitaverage.h
FreeMediaTools/jahshaka/plugins/jitplugins/jitfftfilter/: Makefile  blurlib.cpp  blurlib.h  config.h  fftlib.cpp  fftlib.h  jitfftfilter.cpp  jitfftfilter.h
FreeMediaTools/jahshaka/plugins/jitplugins/jitgaussnoise/: Makefile  config.h  jitgaussnoise.cpp  (+1 more)
FreeMediaTools/jahshaka/plugins/rfxplugins/: Makefile  RASFXPLUGINS
FreeMediaTools/jahshaka/plugins/rtplugins/: Makefile
FreeMediaTools/jahshaka/scenes/: Animation_backup.jsf  Effects_backup.jsf  animtest.jsf  editor1.jef  editor2.jef  espn.jsf  grovejet.jsf  pluginz.jsf
FreeMediaTools/jahshaka/source/: Makefile  Makefile.mike  jahuserinstall  link.sh  plugins.txt
FreeMediaTools/jahshaka/source/AuxiliaryLibraries/: Makefile
FreeMediaTools/jahshaka/source/JahshakaUI/: bar.ui  desktopmiddlebar.ui  fileviewer.ui  jahcalc.ui  jahencoders.ui  jahgift.ui  jahshaka.ui  keyframerui.ui  masterui.ui  menu.ui  modulemiddlebar.ui  networknet.ui  newdesktopui.ui  newmasterui.ui  newmasterui2.ui  playerassetdata.ui  preferences.ui  procedure  sliders.ui
FreeMediaTools/jahshaka/source/OpenLibraries/: Makefile
FreeMediaTools/jahshaka/utils/: cleanup.tcsh  compare.tcsh  diffiles.tcsh  dos2unix.tcsh  makeallpros.sh  nooptimization.tcsh  replace.perl  replace.tcsh  replace_string
FreeMediaTools/m4/: aclocal.m4
FreeMediaTools/metatools/: replacenames.sed
FreeMediaTools/old/: FreeMediaTools.cc  config.h  system.h  xmalloc.c
FreeMediaTools/openlibraries/trunk/: Makefile  Makefile.am  Makefile.in  aclocal.m4  configure.ac  libtool  openlibraries_global_config.hpp  openlibraries_global_config.hpp.in
FreeMediaTools/openlibraries/trunk/autom4te.cache/: output.0  traces.0
FreeMediaTools/openlibraries/trunk/effects/: Makefile  Makefile.am  Makefile.in
FreeMediaTools/openlibraries/trunk/m4/: Makefile  Makefile.am  Makefile.in  boost.m4  bzip2.m4  cg.m4  fast_math.m4  glew.m4  gpl.m4  ofx.m4  openal.m4  opengl.m4  openimagelib.m4  qt.m4  quicktime.m4  sqlite.m4  tiff.m4  umbrella_framework.m4  universal_binary.m4  zlib.m4
FreeMediaTools/openlibraries/trunk/media/: Makefile  Makefile.am  Makefile.in
FreeMediaTools/openlibraries/trunk/src/: Makefile  Makefile.am  Makefile.in
(+1363 files in other folders)
