dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)


dnl AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_INIT(FreeMediaTools.cc,0.1.0,<mdupont@users.sf.net)

dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(FreeMediaTools, 0.1.0)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
#AM_CONFIG_HEADER(config.h)

#AC_CONFIG_SRCDIR([config.h.in])
#AC_CONFIG_HEADER([config.h])


AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_CXX
# Checks for programs.
AC_PROG_LEX
AC_PROG_LN_S
AC_PROG_YACC
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacros.h string.h memory.h fcntl.h dirent.h sys/ndir.h ndir.h alloca.h locale.h )

jm_CHECK_TYPE_STRUCT_UTIMBUF
AC_HEADER_MAJOR
AC_FUNC_ALLOCA
AC_STRUCT_TM
AC_STRUCT_ST_BLOCKS
AC_FUNC_CLOSEDIR_VOID
AC_CHECK_FUNCS(mkfifo)
AC_CHECK_FUNC(mknod)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

#IT_PROG_INTLTOOL


#/usr/include/GL/glew.h
#ä/usr/include/GL/glext.h
#/usr/include/GL/gl.h
#/usr/include/GL/glu.h
#/usr/include/GL/glxew.h


# Checks for libraries.
# FIXME: Replace `main' with a function in `-lGL':
AC_CHECK_LIB([GL], [main])
# FIXME: Replace `main' with a function in `-lGLU':
AC_CHECK_LIB([GLU], [main])
# FIXME: Replace `main' with a function in `-lX11':
AC_CHECK_LIB([X11], [main])
# FIXME: Replace `main' with a function in `-lXext':
AC_CHECK_LIB([Xext], [main])
# FIXME: Replace `main' with a function in `-lXi':
AC_CHECK_LIB([Xi], [main])
# FIXME: Replace `main' with a function in `-lXmu':
AC_CHECK_LIB([Xmu], [main])
# FIXME: Replace `main' with a function in `-lfreetype':
AC_CHECK_LIB([freetype], [main])
# FIXME: Replace `main' with a function in `-ljpeg':
AC_CHECK_LIB([jpeg], [main])
# FIXME: Replace `main' with a function in `-lm':
AC_CHECK_LIB([m], [main])
# FIXME: Replace `main' with a function in `-ln':
AC_CHECK_LIB([n], [main])

# FIXME: Replace `main' with a function in `-lpthread':
AC_CHECK_LIB([pthread], [main])
# FIXME: Replace `main' with a function in `-lsqlite3':
AC_CHECK_LIB([sqlite3], [main])


# INTERNAL LIBST
# FIXME: Replace `main' with a function in `-lmediaobject':
#AC_CHECK_LIB([mediaobject], [main])
# FIXME: Replace `main' with a function in `-lv2_openassetlib':
#AC_CHECK_LIB([v2_openassetlib], [main])
# FIXME: Replace `main' with a function in `-lformats':
#AC_CHECK_LIB([formats], [main])


#/usr/include/qt3/qstring.h

# Checks for header files.
AC_PATH_X
AC_FUNC_ALLOCA
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_MAJOR
AC_CHECK_HEADERS([fcntl.h float.h inttypes.h libintl.h limits.h locale.h memory.h stddef.h stdlib.h string.h strings.h sys/file.h sys/ioctl.h sys/param.h sys/time.h sys/timeb.h unistd.h utime.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STAT
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_CHECK_MEMBERS([struct stat.st_blksize])
AC_HEADER_TIME
AC_STRUCT_TM
AC_TYPE_UID_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_ERROR_AT_LINE
AC_FUNC_FORK
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_REALLOC
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([atexit fdatasync floor ftime ftruncate getcwd gettimeofday memchr memset mkdir mkfifo pow rmdir setenv socket sqrt strchr strdup strrchr strstr strtoul])

# AC_CONFIG_FILES([Makefile
#                  jahshaka/source/AuxiliaryLibraries/FTGL/Makefile
#                  jahshaka/source/AuxiliaryLibraries/Makefile
#                  jahshaka/source/AuxiliaryLibraries/apollon/Makefile
#                  jahshaka/source/AuxiliaryLibraries/blur/Makefile
#                  jahshaka/source/AuxiliaryLibraries/gift/Makefile
#                  jahshaka/source/AuxiliaryLibraries/glew/Makefile
#                  jahshaka/source/AuxiliaryLibraries/spaceball/Makefile
#                  jahshaka/source/Jahshaka/JahCore/Makefile
#                  jahshaka/source/Jahshaka/JahCore/jahobjects/Makefile
#                  jahshaka/source/Jahshaka/JahCore/jahrender/Makefile
#                  jahshaka/source/Jahshaka/JahCore/jahworld/Makefile
#                  jahshaka/source/Jahshaka/JahDesktop/Makefile
#                  jahshaka/source/Jahshaka/JahDesktop/desktop/Makefile
#                  jahshaka/source/Jahshaka/JahDesktop/encoder/Makefile
#                  jahshaka/source/Jahshaka/JahDesktop/library/Makefile
#                  jahshaka/source/Jahshaka/JahDesktop/network/Makefile
#                  jahshaka/source/Jahshaka/JahDesktop/player/Makefile
#                  jahshaka/source/Jahshaka/JahLibraries/Makefile
#                  jahshaka/source/Jahshaka/JahLibraries/jahdatabase/Makefile
#                  jahshaka/source/Jahshaka/JahLibraries/jahdataio/Makefile
#                  jahshaka/source/Jahshaka/JahLibraries/jahformatter/Makefile
#                  jahshaka/source/Jahshaka/JahLibraries/jahglcore/Makefile
#                  jahshaka/source/Jahshaka/JahLibraries/jahkeyframes/Makefile
#                  jahshaka/source/Jahshaka/JahLibraries/jahplugins/Makefile
#                  jahshaka/source/Jahshaka/JahLibraries/jahpreferences/Makefile
#                  jahshaka/source/Jahshaka/JahLibraries/jahthemes/Makefile
#                  jahshaka/source/Jahshaka/JahLibraries/jahtimer/Makefile
#                  jahshaka/source/Jahshaka/JahLibraries/jahtracer/Makefile
#                  jahshaka/source/Jahshaka/JahLibraries/jahtranslate/Makefile
#                  jahshaka/source/Jahshaka/JahLibraries/jahxml/Makefile
#                  jahshaka/source/Jahshaka/JahLibraries/shaders/source/create_turbulence_texture_gpu/Makefile
#                  jahshaka/source/Jahshaka/JahLibraries/shaders/source/earthquake_gpu/Makefile
#                  jahshaka/source/Jahshaka/JahLibraries/shaders/source/explosion_gpu/Makefile
#                  jahshaka/source/Jahshaka/JahLibraries/shaders/source/fire3D_gpu/Makefile
#                  jahshaka/source/Jahshaka/JahLibraries/shaders/source/fisheye_gpgpu/Makefile
#                  jahshaka/source/Jahshaka/JahLibraries/shaders/source/fisheye_gpu/Makefile
#                  jahshaka/source/Jahshaka/JahLibraries/shaders/source/jahshaka_basic/Makefile
#                  jahshaka/source/Jahshaka/JahLibraries/shaders/source/swirl_gpgpu/Makefile
#                  jahshaka/source/Jahshaka/JahModules/Makefile
#                  jahshaka/source/Jahshaka/JahModules/animation/Makefile
#                  jahshaka/source/Jahshaka/JahModules/colorize/Makefile
#                  jahshaka/source/Jahshaka/JahModules/editing/Makefile
#                  jahshaka/source/Jahshaka/JahModules/effect/Makefile
#                  jahshaka/source/Jahshaka/JahModules/keyer/Makefile
#                  jahshaka/source/Jahshaka/JahModules/painter/Makefile
#                  jahshaka/source/Jahshaka/JahModules/text/Makefile
#                  jahshaka/source/Jahshaka/JahModules/tracker/Makefile
#                  jahshaka/source/Jahshaka/JahSource/Makefile
#                  jahshaka/source/Jahshaka/JahSource/jahcreate/Makefile
#                  jahshaka/source/Jahshaka/JahSource/jahmain/Makefile
#                  jahshaka/source/Jahshaka/JahSource/jahsplash/Makefile
#                  jahshaka/source/Jahshaka/JahWidgets/Makefile
#                  jahshaka/source/Jahshaka/JahWidgets/colordropper/Makefile
#                  jahshaka/source/Jahshaka/JahWidgets/colortri/Makefile
#                  jahshaka/source/Jahshaka/JahWidgets/interfaceobjs/Makefile
#                  jahshaka/source/Jahshaka/JahWidgets/jahcalc/Makefile
#                  jahshaka/source/Jahshaka/JahWidgets/jahfileloader/Makefile
#                  jahshaka/source/Jahshaka/JahWidgets/keyframes/Makefile
#                  jahshaka/source/Jahshaka/JahWidgets/mediatable/Makefile
#                  jahshaka/source/Jahshaka/JahWidgets/multitrack/Makefile
#                  jahshaka/source/Jahshaka/JahWidgets/nodes/Makefile
#                  jahshaka/source/Jahshaka/JahWidgets/timeline/Makefile
#                  jahshaka/source/Jahshaka/JahWidgets/waveform/Makefile
#                  jahshaka/source/Makefile
#                  jahshaka/source/OpenLibraries/Makefile
#                  jahshaka/source/OpenLibraries/opencore/Makefile])

dnl AC_CONFIG_SUBDIRS([jahshaka/plugins
dnl                    openlibraries/trunk])

# boost filesystem support
AX_BOOST_FILESYSTEM 

AX_BOOST_PYTHON

AX_BOOST_IOSTREAMS


AX_BOOST_REGEX

AX_BOOST_THREAD


AM_PATH_XML2(2.5.0,,AC_MSG_ERROR([
*** Libxml is required to build ; Available at
http://www.libxml.org/.]))

AC_OUTPUT(Makefile FreeMediaTools.lsm FreeMediaTools.spec)

