
#
#
#

openeffectslib_datadir=$(OPENLIBRARIES_DATAPATH)

nobase_dist_openeffectslib_data_DATA = 		\
	shaders/sepia.cg						\
	shaders/sepia.frag						\
	shaders/fixed_function.vert				\
	shaders/passthrough.cg					\
	shaders/yuv444_to_rgb.cg				\
	shaders/yuv444_to_rgb.frag				\
	shaders/passthrough.vert				\
	shaders/yuv444_to_rgb_deinterlace.cg	\
	shaders/yuv444_to_rgb_deinterlace.frag	\
	shaders/histogram.cg					\
	shaders/histogram.frag					\
	shaders/channel_selector.cg				\
	shaders/channel_selector.frag
