
#
#
#

EXTRA_DIST =	\
	boost.m4	\
	bzip2.m4	\
	cg.m4		\
	fast_math.m4	\
	gelato.m4	\
	glew.m4		\
	gpl.m4		\
	ofx.m4		\
	openal.m4	\
	opengl.m4	\
	openimagelib.m4	\
	pkg.m4		\
	python.m4	\
	qt.m4		\
	quicktime.m4	\
	sqlite.m4	\
	tiff.m4		\
	umbrella_framework.m4	\
	universal_binary.m4	\
	zlib.m4

