
#
#
#

openobjectlib_datadir=$(OPENLIBRARIES_DATAPATH)

nobase_dist_openobjectlib_data_DATA = 		\
	models/complex_glass.x3d				\
	models/disco_lighting.x3d				\
	models/glittering.x3d					\
	models/plastic.x3d						\
	models/ptm.x3d							\
	models/reflections_refractions.x3d		\
	models/shl_per_pixel.x3d				\
	shaders/complex_glass_0.frag			\
	shaders/complex_glass_0.vert			\
	shaders/complex_glass_1.frag			\
	shaders/complex_glass_1.vert			\
	shaders/disco_lighting_0.frag			\
	shaders/disco_lighting_0.vert			\
	shaders/disco_lighting_1.frag			\
	shaders/disco_lighting_1.vert			\
	shaders/disco_lighting_2.frag			\
	shaders/disco_lighting_2.vert			\
	shaders/glittering_0.frag				\
	shaders/glittering_0.vert				\
	shaders/plastic_0.frag					\
	shaders/plastic_0.vert					\
	shaders/ptm_0.frag						\
	shaders/ptm_0.vert						\
	shaders/reflections_refractions_0.frag	\
	shaders/reflections_refractions_0.vert	\
	shaders/reflections_refractions_1.frag	\
	shaders/reflections_refractions_1.vert	\
	shaders/shl_per_pixel_0.frag			\
	shaders/shl_per_pixel_0.vert			\
	textures/FieldstoneBumpDOT3.tga			\
	textures/Fieldstone.tga					\
	textures/LightCube.dds					\
	textures/NoiseVolume.dds				\
	textures/Rainbow.tga					\
	textures/Snow.dds						\
	textures/tablet_a012.tga				\
	textures/tablet_a345.tga				\
	textures/tablet_rgb.tga					\
	textures/Tiles.dds						\
	textures/TilesDOT3.tga

